# uv-offline-installation-bug

./: .gitignore  README.md  download-requirements.ps1  install.sh  pyproject.toml
myproject/: hello.py
