[project]
name = "uv-offline-installation-bug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]

# https://docs.astral.sh/uv/concepts/projects/#libraries
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myproject"]
